# hot-dog

./: Cargo.toml  dogs.txt  hotdog.db
assets/: main.css  tailwind.css
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs
